--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    
+
+
+
+    <a href="http://127.0.0.1:5500/task1/task1.html">task1</a>
+    <h1>Github</h1>
 </head>
 <body>
 
