--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
 
-    <a href="http://127.0.0.1:5500/HW1/index.html">task1</a>
+    <a href="http://127.0.0.1:5500/HW1/index.html">Homework</a>
     <h1>Github</h1>
 </head>
 <body>
