--- a/HW1/index.html
+++ b/HW1/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="inde.css">
 </head>
 
 </head>
 <body>
     
 
-    <script src="index.js"></script>
+    <script src="index2.js"></script>
 </body>
 </html>
