--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
 
-    <a href="HW1/index.html">Homework</a>
+    <a href="HW1/index2.js">Homework</a>
     <br>
 
     <a href="HW1/task/task.html">Homework1</a>
