--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
 
     <a href="/HW1/index.html">Homework</a>
+
+    <br>
+    <a href="HW1/task/task.html">Homework1</a>
+    
     <h1>Github</h1>
 </head>
 <body>
