--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Document</title>
     
     
-   
+    <a href="/HW1/index.html">Homework</a>
+
+    <br>
+    <a href="HW1/task/task.html">Homework1</a>
  
 
     <h1>Github</h1>
