Resolved merge conflict in index.html

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
     
     
-
     <a href="HW1/task/task.html">Homework1</a>
+    <a href="/HW1/index.html">Homework</a>
  
 
     <h1>Github</h1>
