--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
+    <a href="/HW1/index.html">Homework</a>
+    <a href="HW1/task/task.html">Homework1</a>
     <h1>Github</h1>
 </head>
 <body>
 
+    
 <h1>Github</h1>
 
 <script src="index.js"></script>
