created new files

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <a href="/HW1/index.html">Homework</a>
+    <br>
     <a href="/HW1/task/task.html">Homework</a>
+    <br>
+    <a href="/HW1/task2/index.html">Homework1</a>
     
     <h1>Github</h1>
 </head>
