--- a/HW1/task2/index.html
+++ b/HW1/task2/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Profiles</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index1.css">
 </head>
 <body>
-    <script src="index.js"></script>
+    <script src="task1.js"></script>
 </body>
 </html>
