--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <a href="/HW1/task/task.html">Homework</a>
     <br>
     <a href="/HW1/task2/index.html">Homework1</a>
+    <br>
+    <a href="http-post/task2.html">Homework2</a>
+
     
     <h1>Github</h1>
 </head>
