--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <a href="/HW1/task2/index.html">Homework1</a>
     <br>
     <a href="http-post/task2.html">Homework2</a>
-
+    <br>
+    <a href="HW1/task%2012/task12.html">Homework3</a>
     
     <h1>Github</h1>
 </head>
