created new files

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <a href="HW1/task%2012/task12.html">Homework3</a>
     <br>
     <a href="HW1/movie/axios-project/primeer.html">Homework4</a>
-
+<br>
+<a href="HW1/store/st.html">Homework5</a>
     
     <h1>Github</h1>
 </head>
